--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    //数据库框架
+    //网络请求框架
+    //Gson数据解析框架
+    //Glide图片加载框架
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'org.litepal.android:core:1.4.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
-
-    compile 'org.litepal.android:core:1.4.1'   //数据库框架
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'  //网络请求框架
-    compile 'com.google.code.gson:gson:2.7' //Gson数据解析框架
-    compile 'com.github.bumptech.glide:glide:3.7.0'  //Glide图片加载框架
-
 }
